// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Genres /> should render the banner size 1`] = `
<div
  class="styles__Wrapper-sc-6y5ihb-1"
>
  <div
    class="styles__Genre-sc-6y5ihb-0 bOzgdm"
  >
    Action
  </div>
  <div
    class="styles__Genre-sc-6y5ihb-0 bOzgdm"
  >
    Comedy
  </div>
</div>
`;

exports[`<Genres /> should render the bigger size 1`] = `
<div
  class="styles__Wrapper-sc-6y5ihb-1 daGpDx"
>
  <div
    class="styles__Genre-sc-6y5ihb-0 egsKaq"
  >
    Action
  </div>
  <div
    class="styles__Genre-sc-6y5ihb-0 egsKaq"
  >
    Comedy
  </div>
</div>
`;

exports[`<Genres /> should render the details size 1`] = `
<div
  class="styles__Wrapper-sc-6y5ihb-1"
>
  <div
    class="styles__Genre-sc-6y5ihb-0 gCAQid"
  >
    Action
  </div>
  <div
    class="styles__Genre-sc-6y5ihb-0 gCAQid"
  >
    Comedy
  </div>
</div>
`;

exports[`<Genres /> should render the right genres 1`] = `
<div
  class="styles__Wrapper-sc-6y5ihb-1"
>
  <div
    class="styles__Genre-sc-6y5ihb-0 gCAQid"
  >
    Action
  </div>
  <div
    class="styles__Genre-sc-6y5ihb-0 gCAQid"
  >
    Comedy
  </div>
</div>
`;
